--- a/src/app/shared-header/header/header.component.css
+++ b/src/app/shared-header/header/header.component.css
@@ -1,8 +1,12 @@
-/* shared/components/header/header.component.css */
 .header {
   background-color: #ffffff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  padding: 10px 0;
+  padding: 20px 0;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 100;
+  transition: all 0.1s ease;
 }
 
 .container {
@@ -15,15 +19,48 @@
 }
 
 .logo img {
-  height: 40px;
+  height: 60px;
+  transition: all 0.1s ease;
 }
 
-.nav ul {
+/* Navigation */
+.nav {
+  display: flex;
+  align-items: center;
+}
+
+.desktop-menu {
   list-style: none;
   display: flex;
   gap: 20px;
   margin: 0;
   padding: 0;
+}
+
+.mobile-menu {
+  display: none;
+  position: absolute;
+  top: 100%; /* Position below the header */
+  left: 0;
+  width: 100%;
+  background-color: #fff;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  list-style: none;
+  padding: 0;
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.1s ease-out;
+}
+
+.mobile-menu.active {
+  display: block;
+  max-height: 500px; /* Adjust this value based on your menu's height */
+  transition: max-height 0.1s ease-in;
+}
+
+.mobile-menu li {
+  padding: 15px 20px;
+  border-bottom: 1px solid #eee;
 }
 
 .nav ul li a {
@@ -34,6 +71,27 @@
 
 .nav ul li a:hover {
   color: #007bff;
+}
+
+/* Burger Menu */
+.burger-menu {
+  display: none; /* Hide by default on desktop */
+  cursor: pointer;
+  flex-direction: column;
+  gap: 5px;
+}
+
+.burger-menu span {
+  width: 25px;
+  height: 3px;
+  background-color: #333;
+}
+
+/* Search and User Actions */
+.search-user-actions {
+  display: flex;
+  align-items: center;
+  gap: 20px;
 }
 
 .search {
@@ -75,4 +133,38 @@
 
 .user-actions a:hover {
   color: #007bff;
+}
+
+
+/* Shrinking Header */
+.shrink {
+  padding: 10px 0;
+}
+
+.shrink .logo img {
+  height: 40px;
+}
+
+/* Media Queries */
+
+@media (max-width: 768px) {
+  .burger-menu {
+    display: flex;
+  }
+
+  .desktop-menu {
+    display: none;
+  }
+
+  .mobile-menu {
+    display: block;
+  }
+
+  .search-user-actions {
+    display: none;
+  }
+
+  .container {
+    justify-content: space-between;
+  }
 }
